# BasicOpenGLProjectCMake

./: .gitignore  CMakeLists.txt  README.md
inc/: memzero.h
src/: CMakeLists.txt  main.cpp  memzero.cpp
